--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
-
+    xmlns:tools="http://schemas.android.com/tools">
     <!-- Lineas necesarias para Retrofit -->
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -13,10 +12,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar"
-        tools:targetApi="31"
-        android:usesCleartextTraffic="true">
-    |||||<!-- Lineas necesarias para Retrofit: android:usesCleartextTraffic="true" -->
-
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31">
+        <activity
+            android:name=".tareinaActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity> <!-- Lineas necesarias para Retrofit: android:usesCleartextTraffic="true" -->
         <!-- Se agrega la siguiente: android:screenOrientation="portrait" para evitar que se rote la pantalla -->
         <activity
             android:name=".MainActivity"
@@ -29,8 +33,9 @@
         <activity
             android:name=".CargaActivity"
             android:exported="true"
-            android:theme="@style/LaunchTheme" >
-            <!--Linea necesaria para realizar la pantalla de carga, aqui, se define que primero carge el cargaactivity -->
+            android:theme="@style/LaunchTheme">
+
+            <!-- Linea necesaria para realizar la pantalla de carga, aqui, se define que primero carge el cargaactivity -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
