--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,9 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-        </activity> <!-- Lineas necesarias para Retrofit: android:usesCleartextTraffic="true" -->
+        </activity>
+
+        <!-- Lineas necesarias para Retrofit: android:usesCleartextTraffic="true" -->
         <!-- Se agrega la siguiente: android:screenOrientation="portrait" para evitar que se rote la pantalla -->
         <activity
             android:name=".MainActivity"
